--- a/src/Styles.css
+++ b/src/Styles.css
@@ -11,10 +11,10 @@ input {
 body {
   font-family: Arial, sans-serif;
   background-color: #81547050;
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
@@ -24,56 +24,45 @@ h1 {
 }
 
 .card-container {
-  padding: 30px;
-  font-size: 20px;
-  max-width: 400px;
-  min-width: 400px;
+  padding: 15px;
   background-color: #eee8ec;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  display: inline-block;
+  /* display: block; */
 }
 
 .task-input {
   display: flex;
   align-content: center;
   justify-content: center;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
 
 input[name="task-input"] {
-  font-size: 20px;
-  padding: 15px;
-  width: calc(100% - 60px);
+  font-size: 15px;
+  margin-right: 10px;
+  padding: 5px;
   border: 1px solid #ddd;
-  border-radius: 8px;
+  border-radius: 5px;
   color: rgb(0, 0, 0);
-  font-style: normal;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-input[name="task-input"]::placeholder {
-  /* font-style: italic; */
-  color: rgb(94, 93, 93);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+  width: calc(100% - 25px);
 }
 
 .task-input button,
 .task-list button {
-  width: 40px;
-  padding: 0;
+  width: 25px;
+  height: 30px;
   background: none;
   border: none;
   color: rgba(88, 88, 88, 0.906);
   cursor: pointer;
-  font-size: 20px;
-  border-radius: 8px;
+  font-size: 15px;
+  border-radius: 5px;
   margin-left: auto;
-}
-
-.task-list button {
-  height: 40px;
+  /* flex-wrap: wrap; */
 }
 
 .task-input button:hover {
@@ -91,14 +80,33 @@ ul {
 li {
   display: flex;
   align-items: center;
-  font-size: 18px;
+  font-size: 15px;
+  margin-top: 10px;
+  height: 25px;
 }
 
 input[type="checkbox"] {
   cursor: pointer;
-  background-color: white;
-  border: none;
-  height: 25px;
-  width: 25px;
+  height: 15px;
   margin-right: 10px;
+}
+
+.kanban-board {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.kanban-column{
+  width: 30%;
+}
+
+
+.kanban-column h2 {
+  font-size: 20px;
+  text-align: center;
+  align-items: center;
 }
