--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,14 +30,12 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  /* display: block; */
 }
 
 .task-input {
   display: flex;
   align-content: center;
   justify-content: center;
-  /* padding-bottom: 20px; */
 }
 
 input[name="task-input"] {
@@ -47,7 +45,6 @@ input[name="task-input"] {
   border: 1px solid #ddd;
   border-radius: 5px;
   color: rgb(0, 0, 0);
-  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   width: calc(100% - 25px);
 }
 
@@ -62,7 +59,6 @@ input[name="task-input"] {
   font-size: 15px;
   border-radius: 5px;
   margin-left: auto;
-  /* flex-wrap: wrap; */
 }
 
 .task-input button:hover {
@@ -75,9 +71,9 @@ input[name="task-input"] {
 
 ul {
   list-style-type: none;
-}
+} 
 
-li {
+li{
   display: flex;
   align-items: center;
   font-size: 15px;
@@ -93,20 +89,29 @@ input[type="checkbox"] {
 
 .kanban-board {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   padding: 20px;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .kanban-column{
-  width: 30%;
+  margin-top: 20px;
+  width: fit-content;
+  background-color: #eae2e2aa;
+  border-radius: 10px;
+  height: fit-content;
+  width: fit-content;
+  padding: 20px;
+  align-items: center;
 }
 
 
 .kanban-column h2 {
-  font-size: 20px;
+  font-size: 18px;
+  color: rgba(60, 57, 57, 0.783);
+  font-weight: 600;
   text-align: center;
-  align-items: center;
 }
