--- a/src/components/Board/styles/board.css
+++ b/src/components/Board/styles/board.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  padding: 20px;
+  padding: 40px;
   height: 100vh;
   overflow-x: auto;
   box-sizing: border-box;
@@ -25,18 +25,21 @@
 .column-header {
   background-color: #eae2e2e6;
   border-radius: 8px 8px 0 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  margin: 0;
+  border-bottom: 0.5px solid #cdc5c5;
+  border-radius: 8px 8px 0 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .column-header h2 {
-  padding: 15px;
   font-size: 18px;
   color: #333;
   font-weight: 600;
   text-align: start;
-  margin: 0;
-  border-bottom: 0.5px solid #cdc5c5;
-  border-radius: 8px 8px 0 0;
+ 
 }
 
 .cards-list {
