--- a/src/components/Card/styles/cards.css
+++ b/src/components/Card/styles/cards.css
@@ -40,7 +40,8 @@ button {
 }
 .task-input button,
 .task-list button,
-.delete-card-button {
+.delete-card-button, 
+.delete-column-button {
   width: 25px;
   height: 30px;
   background: none;
@@ -76,13 +77,23 @@ box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
   background-color: #737b7393;
 }
 
+.add-column-button {
+  color: rgba(88, 88, 88, 0.906);
+  font-size: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+.add-column-button:hover{
+  background-color: #43434346;
+  transition: background-color 0.3s ease;
+}
+
 /* Delete Card Button */
-.delete-card-button {
+.delete-card-button, .delete-column-button{
   margin-bottom: 10px;
   height: fit-content;
   transition: background-color 0.3s ease;
 }
-.delete-card-button:hover {
+.delete-card-button:hover, .delete-column-button:hover {
   color: #c62828c3;
   font-weight: bold;
 }
