--- a/src/components/Card/cards.css
+++ b/src/components/Card/cards.css
@@ -3,15 +3,15 @@
 .card {
   padding: 10px;
   margin: 15px 0;
-/* background-color: #eee8ecee; */
   background-color: #eae2e2e6;
   border: 1px solid #ddd;
   border-radius: 8px;
   cursor: pointer;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+.card-title {
+  display: flex;
 }
 
 /* Task input styling */
