--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -43,6 +43,20 @@
 
 }
 
+input[name="column-title-input"] {
+  font-size: 17px;
+  color: rgb(95, 89, 89);
+  font-weight: 600;
+}
+
+input[name="column-title-input"]:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  background-color: transparent;
+  /* font-style: italic; */
+}
+
 .cards-list {
   overflow-y: auto;
   padding: 0 10px;
@@ -50,11 +64,11 @@
 }
 
 .column-footer {
-  background-color: #eae2e2e6;
+  /* background-color: #eae2e2e6; */
   border-top: 0.5px solid #cdc5c5;
-  text-align: end;
+  
 }
 
-.kanban-column:hover {
+.column:hover {
   box-shadow: 0 8px 14px rgba(0, 0, 0, 0.15);
 }
