--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -73,3 +73,15 @@ input[name="column-title-input"]:focus {
 .column:hover {
   box-shadow: 0 8px 14px rgba(0, 0, 0, 0.15);
 }
+
+.drop_area{
+  width: 100%;
+  /* border: solid #333; */
+  /* height: fit-content; */
+  opacity: 1;
+  transition: 0.2s ease-in-out;
+}
+
+/* .hide_drop{
+  opacity: 0;
+  /* display: none; */
